do-version/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mysql
  labels:
    app: nextcloud
spec:
  ports:
    - port: 3306
  selector:
    app: nextcloud
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nextcloud-mysql
  labels:
    app: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
        tier: mysql
    spec:
      containers:
      - image: linuxserver/mariadb
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-nc-pv-claim
